// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser function expressions parses colon-separated function declarations 1`] = `
[
  Assignment {
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": {
      "equals": {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": Function {
      "body": Block {
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "statements": [
          Print {
            "expressions": [
              Literal {
                "_location": {
                  "end": {
                    "column": -9,
                    "line": -9,
                  },
                  "start": {
                    "column": -9,
                    "line": -9,
                  },
                },
                "value": BrsString {
                  "inArray": false,
                  "kind": 3,
                  "value": "Lorem ipsum",
                },
              },
            ],
            "tokens": {
              "print": {
                "isReserved": true,
                "kind": "Print",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": -9,
                    "line": -9,
                  },
                  "start": {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "print",
              },
            },
          },
        ],
      },
      "end": {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": [],
      "returns": 10,
    },
  },
]
`;

exports[`parser function expressions parses functions with default argument expressions 1`] = `
[
  Assignment {
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": {
      "equals": {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": Function {
      "body": Block {
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "statements": [],
      },
      "end": {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": [
        {
          "defaultValue": Literal {
            "_location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "inArray": false,
              "kind": 4,
              "value": 3,
            },
          },
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "name": {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "text": "a",
          },
          "type": {
            "kind": 10,
            "location": {
              "end": {
                "column": -1,
                "line": -1,
              },
              "file": "(stdlib)",
              "start": {
                "column": -1,
                "line": -1,
              },
            },
          },
        },
        {
          "defaultValue": Literal {
            "_location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "inArray": false,
              "kind": 4,
              "value": 4,
            },
          },
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "name": {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "text": "b",
          },
          "type": {
            "kind": 10,
            "location": {
              "end": {
                "column": -1,
                "line": -1,
              },
              "file": "(stdlib)",
              "start": {
                "column": -1,
                "line": -1,
              },
            },
          },
        },
        {
          "defaultValue": Binary {
            "left": Variable {
              "name": {
                "isReserved": false,
                "kind": "Identifier",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": -9,
                    "line": -9,
                  },
                  "start": {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "a",
              },
            },
            "right": Literal {
              "_location": {
                "end": {
                  "column": -9,
                  "line": -9,
                },
                "start": {
                  "column": -9,
                  "line": -9,
                },
              },
              "value": Int32 {
                "inArray": false,
                "kind": 4,
                "value": 5,
              },
            },
            "token": {
              "isReserved": false,
              "kind": "Plus",
              "literal": undefined,
              "location": {
                "end": {
                  "column": -9,
                  "line": -9,
                },
                "start": {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "+",
            },
          },
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "name": {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "text": "c",
          },
          "type": {
            "kind": 10,
            "location": {
              "end": {
                "column": -1,
                "line": -1,
              },
              "file": "(stdlib)",
              "start": {
                "column": -1,
                "line": -1,
              },
            },
          },
        },
      ],
      "returns": 10,
    },
  },
]
`;

exports[`parser function expressions parses functions with implicit-dynamic arguments 1`] = `
[
  Assignment {
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": {
      "equals": {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": Function {
      "body": Block {
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "statements": [],
      },
      "end": {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": [
        {
          "defaultValue": undefined,
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "name": {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "text": "a",
          },
          "type": {
            "kind": 10,
            "location": {
              "end": {
                "column": -1,
                "line": -1,
              },
              "file": "(stdlib)",
              "start": {
                "column": -1,
                "line": -1,
              },
            },
          },
        },
        {
          "defaultValue": undefined,
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "name": {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "text": "b",
          },
          "type": {
            "kind": 10,
            "location": {
              "end": {
                "column": -1,
                "line": -1,
              },
              "file": "(stdlib)",
              "start": {
                "column": -1,
                "line": -1,
              },
            },
          },
        },
      ],
      "returns": 10,
    },
  },
]
`;

exports[`parser function expressions parses functions with typed arguments 1`] = `
[
  Assignment {
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": {
      "equals": {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": Function {
      "body": Block {
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "statements": [],
      },
      "end": {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": [
        {
          "defaultValue": undefined,
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "name": {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "text": "str",
          },
          "type": {
            "kind": 3,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
          },
        },
        {
          "defaultValue": undefined,
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "name": {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "text": "count",
          },
          "type": {
            "kind": 4,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
          },
        },
        {
          "defaultValue": undefined,
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "name": {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "text": "separator",
          },
          "type": {
            "kind": 12,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
          },
        },
      ],
      "returns": 10,
    },
  },
]
`;

exports[`parser function expressions parses functions with typed arguments and default expressions 1`] = `
[
  Assignment {
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": {
      "equals": {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": Function {
      "body": Block {
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "statements": [],
      },
      "end": {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": [
        {
          "defaultValue": Literal {
            "_location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "inArray": false,
              "kind": 4,
              "value": 3,
            },
          },
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "name": {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "text": "a",
          },
          "type": {
            "kind": 4,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
          },
        },
        {
          "defaultValue": Binary {
            "left": Variable {
              "name": {
                "isReserved": false,
                "kind": "Identifier",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": -9,
                    "line": -9,
                  },
                  "start": {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "a",
              },
            },
            "right": Literal {
              "_location": {
                "end": {
                  "column": -9,
                  "line": -9,
                },
                "start": {
                  "column": -9,
                  "line": -9,
                },
              },
              "value": Int32 {
                "inArray": false,
                "kind": 4,
                "value": 5,
              },
            },
            "token": {
              "isReserved": false,
              "kind": "Plus",
              "literal": undefined,
              "location": {
                "end": {
                  "column": -9,
                  "line": -9,
                },
                "start": {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "+",
            },
          },
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "name": {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "text": "b",
          },
          "type": {
            "kind": 4,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
          },
        },
      ],
      "returns": 10,
    },
  },
]
`;

exports[`parser function expressions parses minimal empty function expressions 1`] = `
[
  Assignment {
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": {
      "equals": {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": Function {
      "body": Block {
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "statements": [],
      },
      "end": {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": [],
      "returns": 10,
    },
  },
]
`;

exports[`parser function expressions parses non-empty function expressions 1`] = `
[
  Assignment {
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": {
      "equals": {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": Function {
      "body": Block {
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "statements": [
          Print {
            "expressions": [
              Literal {
                "_location": {
                  "end": {
                    "column": -9,
                    "line": -9,
                  },
                  "start": {
                    "column": -9,
                    "line": -9,
                  },
                },
                "value": BrsString {
                  "inArray": false,
                  "kind": 3,
                  "value": "Lorem ipsum",
                },
              },
            ],
            "tokens": {
              "print": {
                "isReserved": true,
                "kind": "Print",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": -9,
                    "line": -9,
                  },
                  "start": {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "print",
              },
            },
          },
        ],
      },
      "end": {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": [],
      "returns": 10,
    },
  },
]
`;

exports[`parser function expressions parses return types 1`] = `
[
  Assignment {
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": {
      "equals": {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": Function {
      "body": Block {
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "statements": [],
      },
      "end": {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": [],
      "returns": 11,
    },
  },
]
`;

exports[`parser sub expressions parses minimal sub expressions 1`] = `
[
  Assignment {
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": {
      "equals": {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": Function {
      "body": Block {
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "statements": [],
      },
      "end": {
        "isReserved": false,
        "kind": "EndSub",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end sub",
      },
      "keyword": {
        "isReserved": true,
        "kind": "Sub",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "sub",
      },
      "parameters": [],
      "returns": 11,
    },
  },
]
`;

exports[`parser sub expressions parses non-empty sub expressions 1`] = `
[
  Assignment {
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": {
      "equals": {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": Function {
      "body": Block {
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "statements": [
          Print {
            "expressions": [
              Literal {
                "_location": {
                  "end": {
                    "column": -9,
                    "line": -9,
                  },
                  "start": {
                    "column": -9,
                    "line": -9,
                  },
                },
                "value": BrsString {
                  "inArray": false,
                  "kind": 3,
                  "value": "Lorem ipsum",
                },
              },
            ],
            "tokens": {
              "print": {
                "isReserved": true,
                "kind": "Print",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": -9,
                    "line": -9,
                  },
                  "start": {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "print",
              },
            },
          },
        ],
      },
      "end": {
        "isReserved": false,
        "kind": "EndSub",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end sub",
      },
      "keyword": {
        "isReserved": true,
        "kind": "Sub",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "sub",
      },
      "parameters": [],
      "returns": 11,
    },
  },
]
`;

exports[`parser sub expressions parses subs with default argument expressions 1`] = `
[
  Assignment {
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": {
      "equals": {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": Function {
      "body": Block {
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "statements": [],
      },
      "end": {
        "isReserved": false,
        "kind": "EndSub",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end sub",
      },
      "keyword": {
        "isReserved": true,
        "kind": "Sub",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "sub",
      },
      "parameters": [
        {
          "defaultValue": Literal {
            "_location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "inArray": false,
              "kind": 4,
              "value": 3,
            },
          },
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "name": {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "text": "a",
          },
          "type": {
            "kind": 10,
            "location": {
              "end": {
                "column": -1,
                "line": -1,
              },
              "file": "(stdlib)",
              "start": {
                "column": -1,
                "line": -1,
              },
            },
          },
        },
        {
          "defaultValue": Literal {
            "_location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "inArray": false,
              "kind": 4,
              "value": 4,
            },
          },
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "name": {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "text": "b",
          },
          "type": {
            "kind": 10,
            "location": {
              "end": {
                "column": -1,
                "line": -1,
              },
              "file": "(stdlib)",
              "start": {
                "column": -1,
                "line": -1,
              },
            },
          },
        },
        {
          "defaultValue": Binary {
            "left": Variable {
              "name": {
                "isReserved": false,
                "kind": "Identifier",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": -9,
                    "line": -9,
                  },
                  "start": {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "a",
              },
            },
            "right": Literal {
              "_location": {
                "end": {
                  "column": -9,
                  "line": -9,
                },
                "start": {
                  "column": -9,
                  "line": -9,
                },
              },
              "value": Int32 {
                "inArray": false,
                "kind": 4,
                "value": 5,
              },
            },
            "token": {
              "isReserved": false,
              "kind": "Plus",
              "literal": undefined,
              "location": {
                "end": {
                  "column": -9,
                  "line": -9,
                },
                "start": {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "+",
            },
          },
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "name": {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "text": "c",
          },
          "type": {
            "kind": 10,
            "location": {
              "end": {
                "column": -1,
                "line": -1,
              },
              "file": "(stdlib)",
              "start": {
                "column": -1,
                "line": -1,
              },
            },
          },
        },
      ],
      "returns": 11,
    },
  },
]
`;

exports[`parser sub expressions parses subs with implicit-dynamic arguments 1`] = `
[
  Assignment {
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": {
      "equals": {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": Function {
      "body": Block {
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "statements": [],
      },
      "end": {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end sub",
      },
      "keyword": {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "sub",
      },
      "parameters": [
        {
          "defaultValue": undefined,
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "name": {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "text": "a",
          },
          "type": {
            "kind": 10,
            "location": {
              "end": {
                "column": -1,
                "line": -1,
              },
              "file": "(stdlib)",
              "start": {
                "column": -1,
                "line": -1,
              },
            },
          },
        },
        {
          "defaultValue": undefined,
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "name": {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "text": "b",
          },
          "type": {
            "kind": 10,
            "location": {
              "end": {
                "column": -1,
                "line": -1,
              },
              "file": "(stdlib)",
              "start": {
                "column": -1,
                "line": -1,
              },
            },
          },
        },
      ],
      "returns": 10,
    },
  },
]
`;

exports[`parser sub expressions parses subs with typed arguments 1`] = `
[
  Assignment {
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": {
      "equals": {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": Function {
      "body": Block {
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "statements": [],
      },
      "end": {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end sub",
      },
      "keyword": {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "sub",
      },
      "parameters": [
        {
          "defaultValue": undefined,
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "name": {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "text": "str",
          },
          "type": {
            "kind": 3,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
          },
        },
        {
          "defaultValue": undefined,
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "name": {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "text": "count",
          },
          "type": {
            "kind": 4,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
          },
        },
        {
          "defaultValue": undefined,
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "name": {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "text": "cb",
          },
          "type": {
            "kind": 8,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
          },
        },
      ],
      "returns": 10,
    },
  },
]
`;

exports[`parser sub expressions parses subs with typed arguments and default expressions 1`] = `
[
  Assignment {
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": {
      "equals": {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": Function {
      "body": Block {
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "statements": [],
      },
      "end": {
        "isReserved": false,
        "kind": "EndSub",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end sub",
      },
      "keyword": {
        "isReserved": true,
        "kind": "Sub",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "sub",
      },
      "parameters": [
        {
          "defaultValue": Literal {
            "_location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "value": Int32 {
              "inArray": false,
              "kind": 4,
              "value": 3,
            },
          },
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "name": {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "text": "a",
          },
          "type": {
            "kind": 4,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
          },
        },
        {
          "defaultValue": Binary {
            "left": Variable {
              "name": {
                "isReserved": false,
                "kind": "Identifier",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": -9,
                    "line": -9,
                  },
                  "start": {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "a",
              },
            },
            "right": Literal {
              "_location": {
                "end": {
                  "column": -9,
                  "line": -9,
                },
                "start": {
                  "column": -9,
                  "line": -9,
                },
              },
              "value": Int32 {
                "inArray": false,
                "kind": 4,
                "value": 5,
              },
            },
            "token": {
              "isReserved": false,
              "kind": "Plus",
              "literal": undefined,
              "location": {
                "end": {
                  "column": -9,
                  "line": -9,
                },
                "start": {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "+",
            },
          },
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "name": {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "text": "b",
          },
          "type": {
            "kind": 4,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
          },
        },
      ],
      "returns": 11,
    },
  },
]
`;

exports[`parser usage allows function expressions in assignment RHS 1`] = `
[
  Assignment {
    "name": {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": {
        "end": {
          "column": -9,
          "line": -9,
        },
        "start": {
          "column": -9,
          "line": -9,
        },
      },
      "text": "anonymousFunction",
    },
    "tokens": {
      "equals": {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "value": Function {
      "body": Block {
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "statements": [
          Print {
            "expressions": [
              Literal {
                "_location": {
                  "end": {
                    "column": -9,
                    "line": -9,
                  },
                  "start": {
                    "column": -9,
                    "line": -9,
                  },
                },
                "value": BrsString {
                  "inArray": false,
                  "kind": 3,
                  "value": "I'm anonymous",
                },
              },
            ],
            "tokens": {
              "print": {
                "isReserved": true,
                "kind": "Print",
                "literal": undefined,
                "location": {
                  "end": {
                    "column": -9,
                    "line": -9,
                  },
                  "start": {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "print",
              },
            },
          },
        ],
      },
      "end": {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": [],
      "returns": 10,
    },
  },
]
`;

exports[`parser usage allows sub expressions in call arguments 1`] = `
[
  Expression {
    "expression": Call {
      "args": [
        Function {
          "body": Block {
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "file": undefined,
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "statements": [
              Print {
                "expressions": [
                  Literal {
                    "_location": {
                      "end": {
                        "column": -9,
                        "line": -9,
                      },
                      "start": {
                        "column": -9,
                        "line": -9,
                      },
                    },
                    "value": BrsString {
                      "inArray": false,
                      "kind": 3,
                      "value": "I'm a callback",
                    },
                  },
                ],
                "tokens": {
                  "print": {
                    "isReserved": true,
                    "kind": "Print",
                    "literal": undefined,
                    "location": {
                      "end": {
                        "column": -9,
                        "line": -9,
                      },
                      "start": {
                        "column": -9,
                        "line": -9,
                      },
                    },
                    "text": "print",
                  },
                },
              },
            ],
          },
          "end": {
            "isReserved": false,
            "kind": "EndFunction",
            "literal": undefined,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "text": "end function",
          },
          "keyword": {
            "isReserved": true,
            "kind": "Function",
            "literal": undefined,
            "location": {
              "end": {
                "column": -9,
                "line": -9,
              },
              "start": {
                "column": -9,
                "line": -9,
              },
            },
            "text": "function",
          },
          "parameters": [],
          "returns": 10,
        },
      ],
      "callee": Variable {
        "name": {
          "isReserved": false,
          "kind": "Identifier",
          "literal": undefined,
          "location": {
            "end": {
              "column": -9,
              "line": -9,
            },
            "start": {
              "column": -9,
              "line": -9,
            },
          },
          "text": "acceptsCallback",
        },
      },
      "closingParen": {
        "isReserved": false,
        "kind": "RightParen",
        "literal": undefined,
        "location": {
          "end": {
            "column": -9,
            "line": -9,
          },
          "start": {
            "column": -9,
            "line": -9,
          },
        },
        "text": ")",
      },
      "optional": false,
    },
  },
]
`;
